reading from config file and added multiple vendors per event