@@ -1,41 +1,15 @@
-import java.io.IOException;
-import java.nio.file.InvalidPathException;
-import java.time.LocalDateTime;
-import java.time.format.DateTimeFormatter;
 import java.util.ArrayList;
-import java.util.logging.FileHandler;
-import java.util.logging.Logger;
-import java.util.logging.SimpleFormatter;
 
-public class Event implements Runnable {
+public class Event{
     private static int nextId = 1;
-    private int id;
-    private int vendorId;
+    private final int id;
+    private Vendor vendor;
     private ArrayList<Ticket> poolTickets = new ArrayList<Ticket>();
     private ArrayList<Ticket> soldTickets = new ArrayList<Ticket>();
     private ArrayList<Ticket> availableTickets = new ArrayList<Ticket>();
-    private int poolSize;
-    private int totalEventTickets;
+    private final int poolSize;
+    private final int totalEventTickets;
     private ArrayList<VendorEventAssociation> vendorEventAssociations = new ArrayList<VendorEventAssociation>();
-    private static final Logger logger = Logger.getLogger(Event.class.getName());
-
-    static {
-        try {
-            LocalDateTime currentDateTime = LocalDateTime.now();
-            // Configure the logger with a FileHandler and SimpleFormatter
-            DateTimeFormatter formatter = DateTimeFormatter.ofPattern("yyyy-MM-dd _ HH-mm-ss");
-            String formattedDateTime = currentDateTime.format(formatter);
-            String filePath = "src/Logs/" + formattedDateTime + "-event.log";
-            FileHandler fileHandler = new FileHandler(filePath, true); // "true" to append to the file
-            fileHandler.setFormatter(new SimpleFormatter());  // Sets a simple text format for logs
-            logger.addHandler(fileHandler);
-            logger.setUseParentHandlers(false); // Disables logging to console
-        } catch (IOException e) {
-            logger.warning("Failed to set up file handler for logger: " + e.getMessage());
-        }catch(InvalidPathException e){
-            logger.warning("Failed to set up file handler for logger hehe: " + e.getMessage());
-        }
-    }
 
     public Event(int poolSize, int totalEventTickets) {
         this.id = nextId++;
@@ -81,8 +55,8 @@ public class Event implements Runnable {
         return id;
     }
 
-    public int getVendorId() {
-        return vendorId;
+    public Vendor getVendor() {
+        return vendor;
     }
 
     public ArrayList<Ticket> getSoldTickets() {
@@ -97,35 +71,41 @@ public class Event implements Runnable {
         return totalEventTickets;
     }
 
-    public void setVendorId(int vendorId) {
-        this.vendorId = vendorId;
+    public void setVendor(Vendor vendor) {
+        this.vendor = vendor;
     }
 
     public void removeTicketFromPool(){
-        Ticket ticket = poolTickets.get(0);
-        poolTickets.remove(0);
+        Ticket ticket = poolTickets.getFirst();
+        poolTickets.removeFirst();
         soldTickets.add(ticket);
+    }
+
+    public void addTicketToPool(){
+        Ticket ticket = availableTickets.getFirst();
+        poolTickets.add(ticket);
+        availableTickets.removeFirst();
     }
 
     public boolean allTicketsSold(){
         return poolTickets.isEmpty() && availableTickets.isEmpty();
     }
 
-
-
-    @Override
-    public void run(){
-
+    public void startVendorThreads() {
+        for (VendorEventAssociation association : vendorEventAssociations) {
+            Thread thread = new Thread(association);
+            thread.start();
+        }
     }
 
     @Override
     public String toString() {
         return "Event{" +
                 "id=" + id +
-                ", vendorId=" + vendorId +
-                ", poolTickets=" + poolTickets +
-                ", soldTickets=" + soldTickets +
-                ", availableTickets=" + availableTickets +
+                ", vendor=" + vendor.getVendorId() +
+                ", poolTickets=" + poolTickets.size() +
+                ", soldTickets=" + soldTickets.size() +
+                ", availableTickets=" + availableTickets.size() +
                 ", poolSize=" + poolSize +
                 ", totalEventTickets=" + totalEventTickets +
                 ", vendorEventAssociations=" + vendorEventAssociations +
